--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ ply==3.11
 psutil==5.8.0
 pybind11==2.6.2
 pycparser==2.20
+pygame==2.0.1
 pyrsistent==0.17.3
 python-constraint==1.4.0
 python-dateutil==2.8.1
@@ -54,5 +55,6 @@ sympy==1.7.1
 threadpoolctl==2.1.0
 urllib3==1.26.3
 virtualenv==20.4.2
+virtualenv-clone==0.5.4
 websockets==8.1
 yfinance==0.1.55
